<resources>
    <string name="app_name">MobileOSP</string>
    <string name="czlonkowie">Członkowie</string>
    <string name="samochody">Samochody</string>
    <string name="sprzet">Sprzęt</string>
    <string name="kasa">Kasa</string>
    <string name="obroty_finansowe">Obroty finansowe</string>
    <string name="skladki">Składki</string>
    <string name="dodaj_cz_onka">Dodaj członka</string>
    <string name="dane_kontaktowe_i_adresowe">Dane kontaktowe i adresowe</string>
    <string name="dodaj">DODAJ</string>
    <string name="anuluj">Anuluj</string>
    <string name="dodaj_samoch_d">Dodaj samochód</string>
    <string name="dodaj_sprz_t">Dodaj sprzęt</string>
    <string name="dodaj_sk_adk">Dodaj składkę</string>
    <string name="dodaj_obr_t">Dodaj obrót</string>
    <string name="obroty_bankowe">Obroty bankowe</string>
    <string name="obroty_kasowe">Obroty kasowe</string>
    <string name="w_tym">W TYM</string>
    <string name="przychody">Przychody</string>
    <string name="koszty">Koszty</string>
    <string name="uwagi">Uwagi</string>
</resources>