<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/DialogBackgroundColor"
    android:orientation="vertical"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_obr_t"
        android:textColor="@color/TextColor"
        android:textSize="25sp"
        android:layout_marginTop="15sp"
        android:textStyle="bold"
        android:gravity="center"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_LP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLP"
            android:textSize="15sp"
            android:hint="Lp."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>


    </com.google.android.material.textfield.TextInputLayout>




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_DateOfSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDateOfSave"
            android:textSize="15sp"
            android:hint="Data zapisu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etType"
            android:textSize="15sp"
            android:hint="Rodzaj i numer dowodu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obroty_bankowe"
        android:layout_marginTop="15dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BankIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBankIncome"
            android:textSize="15sp"
            android:hint="Przychód"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BankOutcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBankOutcome"
            android:textSize="15sp"
            android:hint="Rozchód"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BankStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBankStatus"
            android:textSize="15sp"
            android:hint="Stan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/obroty_kasowe"
        android:layout_marginTop="15dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_CashIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCashIncome"
            android:textSize="15sp"
            android:hint="Przychód"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_CashOutcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCashOutcome"
            android:textSize="15sp"
            android:hint="Rozchód"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_CashStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etCashStatus"
            android:textSize="15sp"
            android:hint="Stan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/w_tym"
        android:layout_marginTop="20dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:gravity="center"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/przychody"
        android:layout_marginTop="15dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_NormalMembersMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNormalMembersMoney"
            android:textSize="15sp"
            android:hint="Wpłaty członków zwyczajnych"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_SupportMembersMoney"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSupportMembersMoney"
            android:textSize="15sp"
            android:hint="Wpłaty członków wspierających"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etGrant"
            android:textSize="15sp"
            android:hint="Dotacje, subwencje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BankInterest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBankInterest"
            android:textSize="15sp"
            android:hint="Odsetki bankowe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/koszty"
        android:layout_marginTop="15dp"
        android:textColor="@color/TextColor"
        android:textStyle="bold"
        android:gravity="center"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Materials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMaterials"
            android:textSize="15sp"
            android:hint="Materiały"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etServices"
            android:textSize="15sp"
            android:hint="Usługi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBOP"
            android:textSize="15sp"
            android:hint="Bezosob. fund płac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_BussinessTravel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etBussinessTravel"
            android:textSize="15sp"
            android:hint="Podróże służbowe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etOther"
            android:textSize="15sp"
            android:hint="Pozostałe koszty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/uwagi"
        android:textStyle="bold"
        android:textSize="15sp"
        android:textColor="@color/TextColor"
        android:layout_marginTop="15dp"
        android:gravity="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextColor="@color/LightGray"
        app:boxStrokeColor="@color/BoxStrokeColor"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etComments"
            android:textSize="15sp"
            android:hint="Uwagi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">


        <Button
            android:id="@+id/btAddFinances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonsColor"
            android:text="@string/dodaj"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btAddfinancesCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonsColor"
            android:text="@string/anuluj"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            />

    </LinearLayout>


</LinearLayout>
</ScrollView>