<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/DialogBackgroundColor"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dodaj_sk_adk"
        android:textColor="@color/TextColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="15dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_NameSurname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etNameSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Imię i nazwisko/nazwa przedsiębiorstwa"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_DeclarationDate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDeclarationDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Data podpisania deklaracji (członkowie wspierający)"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_MoneyDeclared"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMoneyDeclared"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kwota zadeklarowana(członkowie wspierający)"
            android:inputType="number"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Year"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Rok"
            android:inputType="number"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_Date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Data wpłaty"
            android:inputType="number"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_MoneyAmount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:boxStrokeColor="@color/BoxStrokeColor"
        app:hintTextColor="@color/LightGray"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="10dp"
        >
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMoneyAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Kwota"
            android:inputType="number"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">


        <Button
            android:id="@+id/btAddDue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonsColor"
            android:text="@string/dodaj"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btAddDCancelCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/ButtonsColor"
            android:text="@string/anuluj"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/TextColor"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
</ScrollView>